[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/cards-bg3.png" type="Texture" id=1]
[ext_resource path="res://card.tscn" type="PackedScene" id=2]
[ext_resource path="res://deck.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/board.gd" type="Script" id=4]
[ext_resource path="res://dock.tscn" type="PackedScene" id=5]

[node name="Board" type="Node2D" groups=[
"cards",
]]
script = ExtResource( 4 )
Card = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512.63, 385.878 )
z_index = -1
texture = ExtResource( 1 )

[node name="Deck" parent="." instance=ExtResource( 3 )]
position = Vector2( 100, 120 )

[node name="OpenCard" type="Node2D" parent="."]
position = Vector2( 256, 120 )

[node name="Tween" type="Tween" parent="."]

[node name="1_card" type="Position2D" parent="."]
position = Vector2( 150, 350 )

[node name="2_card" type="Position2D" parent="."]
position = Vector2( 270, 350 )

[node name="3_card" type="Position2D" parent="."]
position = Vector2( 390, 350 )

[node name="4_card" type="Position2D" parent="."]
position = Vector2( 510, 350 )

[node name="5_card" type="Position2D" parent="."]
position = Vector2( 630, 350 )

[node name="6_card" type="Position2D" parent="."]
position = Vector2( 750, 350 )

[node name="7_card" type="Position2D" parent="."]
position = Vector2( 870, 350 )

[node name="Area2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 412, 120 )

[node name="Area2D2" parent="." instance=ExtResource( 5 )]
position = Vector2( 532, 120 )

[node name="Area2D3" parent="." instance=ExtResource( 5 )]
position = Vector2( 652, 120 )

[node name="Area2D4" parent="." instance=ExtResource( 5 )]
position = Vector2( 772, 120 )
[connection signal="next_card" from="Deck" to="." method="_on_next_card"]
[connection signal="tween_completed" from="Tween" to="." method="_on_card_tween_completed"]
